--- a/src/global/forms.scss
+++ b/src/global/forms.scss
@@ -93,7 +93,7 @@
       @apply px-3;
       @apply py-2;
       @apply items-center;
-      @apply text-xl;
+      @apply text-lg;
       background: transparent;
     }
 
